--- a/src/components/Visualisation/styles.css
+++ b/src/components/Visualisation/styles.css
@@ -5,8 +5,7 @@
 .visualisationBackground {
   position: relative;
   transform-origin: 0 0;
-  transition: transform 0.2s cubic-bezier(0.25, 0.1, 0.25, 1),
-            width 0.2s cubic-bezier(0.25, 0.1, 0.25, 1),
+  transition: width 0.2s cubic-bezier(0.25, 0.1, 0.25, 1),
             height 0.2s cubic-bezier(0.25, 0.1, 0.25, 1);
 }
 
@@ -21,8 +20,9 @@
 }
 
 .visualisationBox {
-  width: 100vw;
-  height: 100vh;
+  width: 100dvw;
+  height: 100dvh;
+  transition: width 0.3 ease, height 0.3 ease;
   user-select: none;
   position: relative;
 }
